# iamm_sdk

./: .gitignore  Cargo.toml  README.md  trampoline.toml
generators/: Cargo.toml
generators/src/: lib.rs
schemas/: Cargo.toml
schemas/src/: lib.rs  nft.rs
scripts/iamm_nft/: Cargo.toml  build.sh  capsule.toml
scripts/iamm_nft/contracts/iamm_nft/: Cargo.toml
scripts/iamm_nft/contracts/iamm_nft/src/: main.rs
scripts/iamm_nft/contracts/iamm_nft/src/invariants/: mod.rs
scripts/iamm_nft/contracts/iamm_nft/src/queries/: mod.rs
scripts/iamm_nft/tests/: Cargo.toml
scripts/iamm_nft/tests/src/: lib.rs  tests.rs
src/: lib.rs
