[package]
name = "iamm_nft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
iamm_sdk-schemas = {git = "https://github.com/WilfredTA/iamm_sdk", default-features = false, features = ["script"]}
trampoline-sdk = {git = "https://github.com/Tempest-Protocol/trampoline", branch = "types-lib", default-features = false, features = ["script"]}
blake2b-ref = "0.3.0"
hashbrown = "0.12.1"